@@ -62,9 +62,6 @@ typedef struct
 GType        		 xfpm_battery_get_type           (void) G_GNUC_CONST;
 XfpmBattery    		*xfpm_battery_new                (const HalBattery *device);
 
-void                     xfpm_battery_set_show_icon      (XfpmBattery *battery,
-							  XfpmShowIcon show_icon);
-							  
 const HalBattery	*xfpm_battery_get_device         (XfpmBattery *battery);
 
 XfpmBatteryState         xfpm_battery_get_state          (XfpmBattery *battery);
@@ -74,9 +71,6 @@ GtkStatusIcon  		*xfpm_battery_get_status_icon    (XfpmBattery *battery);
 const gchar    		*xfpm_battery_get_icon_name      (XfpmBattery *battery);
 
 void            	 xfpm_battery_show_info          (XfpmBattery *battery);
-
-void                     xfpm_battery_set_critical_level (XfpmBattery *battery,
-							  guint8 critical_level);
 
 G_END_DECLS
 
