@@ -1,4 +1,7 @@
 
+2009-03-17 19:54 Ali aliov@xfce.org 
+	 * : Some optimization in the battery code+added GetOnBattery and on LowBattery DBus methods
+
 2009-03-17 19:15 Ali aliov@xfce.org 
 	 * : Added experimentale code to monitor hal proxy+some typos
 
